--- a/src/analysis/refinement_bots/role_follower.ipynb
+++ b/src/analysis/refinement_bots/role_follower.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"/home/mihaelabaksic/proj/2023-languagelearning\")\n",
@@ -24,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,35 +140,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tone_and_voice_template = \"Make minimal changes to the tone and voice of the sentence to sound more like {}. {}\" "
+    "tone_and_voice_template = \"You are a {0}. You are speaking to {1}. Make minimal changes to the tone and voice of the provided sentence to sound more like {0}. \\\"{2}\\\"\" "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Please remain calm and stay inside your vehicles until the situation has been thoroughly assessed.'"
+       "'Stay calm and stay inside your vehicles until we have thoroughly assessed the situation.'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "role = 'police officer'\n",
+    "user_role = 'president'\n",
     "sentence = 'Remain calm and remain inside your vehicles until the situation is thoroughly assessed.'\n",
     "\n",
-    "\n",
-    "prompt = builder.add_template(tone_and_voice_template, (role, sentence)).build()\n",
+    "prompt = builder.add_template(tone_and_voice_template, (role, user_role, sentence)).build()\n",
     "builder.reset()\n",
     " \n",
     "rephrasing = t.send(prompt)\n",
@@ -168,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -177,17 +186,18 @@
        "\"Stay calm and stay in your cars until we figure out what's going on, okay?\""
       ]
      },
-     "execution_count": 15,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "role = 'child'\n",
+    "user_role = 'teacher'\n",
     "sentence = 'Remain calm and remain inside your vehicles until the situation is thoroughly assessed.'\n",
     "\n",
     "\n",
-    "prompt = builder.add_template(tone_and_voice_template, (role, sentence)).build()\n",
+    "prompt = builder.add_template(tone_and_voice_template, (role, user_role, sentence)).build()\n",
     "builder.reset()\n",
     " \n",
     "rephrasing = t.send(prompt)\n",
@@ -196,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -205,17 +215,18 @@
        "\"Stay calm and stay in your vehicles until we've thoroughly assessed the situation.\""
       ]
      },
-     "execution_count": 16,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "role = 'Construction worker'\n",
+    "user_role = 'Architect'\n",
     "sentence = 'Remain calm and remain inside your vehicles until the situation is thoroughly assessed.'\n",
     "\n",
     "\n",
-    "prompt = builder.add_template(tone_and_voice_template, (role, sentence)).build()\n",
+    "prompt = builder.add_template(tone_and_voice_template, (role, user_role, sentence)).build()\n",
     "builder.reset()\n",
     " \n",
     "rephrasing = t.send(prompt)\n",
@@ -224,26 +235,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"Yo, just stay cool and stay put in your rides until we've checked out the whole situation, alright?\""
+       "\"Yo, stay cool and stay put in your rides until we figure out what's goin' on, ya know?\""
       ]
      },
-     "execution_count": 17,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "role = 'Rocky Balboa'\n",
+    "user_role = 'Coach'\n",
     "sentence = 'Remain calm and remain inside your vehicles until the situation is thoroughly assessed.'\n",
     "\n",
     "\n",
-    "prompt = builder.add_template(tone_and_voice_template, (role, sentence)).build()\n",
+    "prompt = builder.add_template(tone_and_voice_template, (role, user_role, sentence)).build()\n",
     "builder.reset()\n",
     " \n",
     "rephrasing = t.send(prompt)\n",
@@ -263,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tone_and_voice_template_with_ll = \"Make minimal changes to the tone and voice of the sentence to sound more like {}. Use {} level of english only.\" "
+    "tone_and_voice_template_with_ll = \"Make minimal changes to the tone and voice of the sentence to sound more like {} speaking to {}. Use {} level of english only.\" "
    ]
   },
   {
