Alternative prompt analysis

--- a/src/analysis/refinement_bots/role_follower.ipynb
+++ b/src/analysis/refinement_bots/role_follower.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"/home/mihaelabaksic/proj/2023-languagelearning\")\n",
@@ -33,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,16 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Remain calm and remain inside your vehicles until they ascertain the situation.'"
+       "'Remain calm and remain inside your vehicles until the situation is assessed.'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,38 +262,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tone_and_voice_template_with_ll = \"Make minimal changes to the tone and voice of the sentence to sound more like {} speaking to {}. Use {} level of english only.\" "
+    "tone_and_voice_template_with_ll = \"Rephrase the sentence to match the tone and voice of a {} speaking to {}. Use {} level of english only. \\\"{}\\\"\" "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A1:  I gotta talk to my mom before I can make a big decision like that.\n",
-      "C2:  I gotta ask my mom first before I commit to anything.\n"
+      "A1:  I need to talk to my mom before I can promise anything.\n",
+      "C2:  I gotta talk to my mom first before I make any big promises.\n"
      ]
     }
    ],
    "source": [
     "role = 'child'\n",
+    "role_user = 'teacher'\n",
     "\n",
     "sentence= \"I have to contact my mother before I make such committment.\"\n",
     "\n",
-    "prompt = builder.add_template(tone_and_voice_template_with_ll, (role, sentence, 'A1')).build()\n",
+    "prompt = builder.add_template(tone_and_voice_template_with_ll, (role, role_user, 'A1', sentence)).build()\n",
     "builder.reset()\n",
     "rephrasing = t.send(prompt)\n",
     "print('A1: ', rephrasing)\n",
     "\n",
-    "prompt = builder.add_template(tone_and_voice_template_with_ll, (role, sentence, 'C2')).build()\n",
+    "prompt = builder.add_template(tone_and_voice_template_with_ll, (role, role_user, 'C2', sentence)).build()\n",
     "builder.reset()\n",
     "rephrasing = t.send(prompt)\n",
     "print('C2: ', rephrasing)"
@@ -310,33 +302,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A1:  I must inquire with my esteemed mother as to whether she grants me permission to proceed.\n",
-      "C2:  I must inquire of my esteemed mother as to whether she grants me permission to proceed.\n"
+      "A1:  I have inquired with my mother to seek her permission for me to attend.\n",
+      "C2:  I have inquired with my mother regarding her permission for me to proceed.\n"
      ]
     }
    ],
    "source": [
     "role = 'distinguished scholar'\n",
+    "role_user = 'supervisor'\n",
     "\n",
     "sentence= \"I have ask my mommy if she lets me go.\"\n",
     "\n",
-    "prompt = builder.add_template(tone_and_voice_template_with_ll, (role, sentence, 'A1')).build()\n",
+    "prompt = builder.add_template(tone_and_voice_template_with_ll, (role, role_user, 'A1', sentence)).build()\n",
     "builder.reset()\n",
     "rephrasing = t.send(prompt)\n",
     "print('A1: ', rephrasing)\n",
     "\n",
-    "prompt = builder.add_template(tone_and_voice_template_with_ll, (role, sentence, 'C2')).build()\n",
+    "prompt = builder.add_template(tone_and_voice_template_with_ll, (role, role_user, 'C2', sentence)).build()\n",
     "builder.reset()\n",
     "rephrasing = t.send(prompt)\n",
     "print('C2: ', rephrasing)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Including a setting description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "role_and_setting_template = \"Rephrase the sentence to match the tone and voice of a {} speaking to {} in a setting described as {}. \\\"{}\\\"\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jimmy, I must express my deep disappointment in your actions.\n"
+     ]
+    }
+   ],
+   "source": [
+    "role = 'teacher'\n",
+    "user_role = '5 year old student'\n",
+    "setting = 'On a field trip'\n",
+    "\n",
+    "sentence = 'Jimmy! Your actions are dispicable.'\n",
+    "\n",
+    "\n",
+    "prompt = builder.add_template(role_and_setting_template, (role, role_user, setting, sentence)).build()\n",
+    "builder.reset()\n",
+    "rephrasing = t.send(prompt)\n",
+    "print(rephrasing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "role_setting_language_template = \"Rephrase the sentence to match the tone and voice of a {} speaking to {} in a setting described as {}. Use {} level of english only. \\\"{}\\\"\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A1:  I need to talk to my mom before I can make a promise like that, teacher.\n",
+      "C2:  I gotta talk to my mom before I make any promises, teacher.\n"
+     ]
+    }
+   ],
+   "source": [
+    "role = 'child'\n",
+    "role_user = 'teacher'\n",
+    "setting = 'In a classroom.'\n",
+    "\n",
+    "sentence= \"I have to contact my mother before I make such committment.\"\n",
+    "\n",
+    "prompt = builder.add_template(role_setting_language_template, (role, role_user, setting , 'A1', sentence)).build()\n",
+    "builder.reset()\n",
+    "rephrasing = t.send(prompt)\n",
+    "print('A1: ', rephrasing)\n",
+    "\n",
+    "prompt = builder.add_template(role_setting_language_template, (role, role_user, setting, 'C2', sentence)).build()\n",
+    "builder.reset()\n",
+    "rephrasing = t.send(prompt)\n",
+    "print('C2: ', rephrasing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
