--- a/src/analysis/refinement_bots/user_encouragement.ipynb
+++ b/src/analysis/refinement_bots/user_encouragement.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,6 +420,55 @@
     "\n",
     "OVERALL:\n",
     "The No Question few shot prompt seems to work the best (temp=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Alternative prompt - focus on GPT instead of user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template_gpt_few_shot = \"This is a text by {0} talking to {1} in a setting described as  \\\"{2}\\\". Rephrase the sentence to make it more engaging and stimulative. Keep the level of language proficiency used. Keep the text length. \\n\\n Example: \\\"I am very interested in your research group\\\"\\nRefinement: \\\"I am very interested in your research group. Are you taking new PhD students?\\\"\\n\\nExample: \\\"This building is so cool.\\\"\\nRefinement: \\\"This is such an amazing building, I think it's Vienna Secession style.\\\"\\n\\\"{3}\\\" \""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"I'll be back in a jiffy with your scrumptious order, just the way you like it.\"\n",
+      "\"We have never had the pleasure of a human's presence in these enchanted woods before.\"\n",
+      "\"I would love to pay a visit to your lab one day and witness firsthand the groundbreaking work you and your team are doing.\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in examples:\n",
+    "    builder.add_template(template_gpt_few_shot, (e['GPT_role'], e['user_role'],e['setting'], e['sentence']))\n",
+    "    prompt = builder.build()\n",
+    "    builder.reset()\n",
+    "    \n",
+    "    refinement = t.send(prompt)\n",
+    "    print(refinement)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Conclusion\n",
+    "Its better to direct it at user"
    ]
   }
  ],
