Language level refinement - prompt alternatives

--- a/src/analysis/refinement_bots/language_proficiency_level.ipynb
+++ b/src/analysis/refinement_bots/language_proficiency_level.ipynb
@@ -223,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "refinement_template = 'The teext was written by GPT using {0} CEFR level of proficiency. Refine the text to be on a {0} level: {1}'"
+    "refinement_template = 'The text was written by GPT using {0} CEFR level of proficiency. Refine the text to be on a {0} level: {1}'"
    ]
   },
   {
