Language level role fitness alternative 1 dataset

--- a/src/analysis/refinement_bots/alternative_prompts_test.ipynb
+++ b/src/analysis/refinement_bots/alternative_prompts_test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "    'user_role' : 'visitor'   \n",
     "}\n",
     "\n",
-    "sentence = 'We don\\'t have that book right now. Someone just rented the last copy.'\n",
+    "sentence = 'librarian: We don\\'t have that book right now. Someone just rented the last copy.'\n",
     "\n",
     "language_level = 'C1'\n",
     "\n",
@@ -128,10 +128,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unfortunately, the book you are looking for is currently unavailable as it has been recently rented out by another individual.\n"
+     "ename": "NameError",
+     "evalue": "name 'll_alternatives' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# alternative 1\u001b[39;00m\n\u001b[1;32m      3\u001b[0m builder\u001b[39m.\u001b[39mreset()\n\u001b[0;32m----> 4\u001b[0m builder\u001b[39m.\u001b[39madd_template(ll_alternatives[\u001b[39m1\u001b[39m], (language_level, cefr_description))\n\u001b[1;32m      5\u001b[0m builder\u001b[39m.\u001b[39madd_template(sentence)\n\u001b[1;32m      7\u001b[0m prompt \u001b[39m=\u001b[39m builder\u001b[39m.\u001b[39mbuild()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'll_alternatives' is not defined"
      ]
     }
    ],
@@ -179,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,14 +192,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unfortunately, at the moment, we do not possess the book as it has been recently borrowed by another individual, leaving us without any remaining copies.\n"
+      "librarian: Unfortunately, the book you're looking for is currently unavailable as the last copy has been rented by someone.\n"
      ]
     }
    ],
@@ -212,14 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm sorry, but at the moment, we do not have that particular book available. It seems that the last copy has been recently borrowed by another patron.\n"
+      "I apologize, but at the moment, the book you are looking for is unavailable as it has been recently borrowed by another patron.\n"
      ]
     }
    ],
@@ -267,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,14 +280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm sorry, but the book you're looking for is currently unavailable. It seems that someone has recently borrowed the last available copy.\n"
+      "I'm sorry, but unfortunately, the book you are looking for is currently unavailable as someone has recently borrowed the last available copy.\n"
      ]
     }
    ],
@@ -300,14 +304,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm sorry, but we currently don't have that book available. Another visitor just borrowed the last copy.\n"
+      "librarian: I'm sorry, but unfortunately, we don't currently have that book available. It seems that someone has just borrowed the last copy.\n"
      ]
     }
    ],
@@ -324,14 +328,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'm sorry, but we currently don't have that book available. Another visitor just borrowed the last copy.\n"
+      "librarian: I'm sorry, but we currently don't have that book available. It seems that someone has just borrowed the last copy.\n"
      ]
     }
    ],
