--- a/src/analysis/refinement_bots/alternative_prompts_test.ipynb
+++ b/src/analysis/refinement_bots/alternative_prompts_test.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"/home/mihaelabaksic/proj/2023-languagelearning\")\n",
@@ -35,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Currently, we do not possess the aforementioned book. It has recently been borrowed by another individual, leaving us without any remaining copies.\n"
+      "Librarian: Unfortunately, we are currently out of stock for that book. The last available copy was recently borrowed by someone.\n"
      ]
     }
    ],
@@ -124,18 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'll_alternatives' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# alternative 1\u001b[39;00m\n\u001b[1;32m      3\u001b[0m builder\u001b[39m.\u001b[39mreset()\n\u001b[0;32m----> 4\u001b[0m builder\u001b[39m.\u001b[39madd_template(ll_alternatives[\u001b[39m1\u001b[39m], (language_level, cefr_description))\n\u001b[1;32m      5\u001b[0m builder\u001b[39m.\u001b[39madd_template(sentence)\n\u001b[1;32m      7\u001b[0m prompt \u001b[39m=\u001b[39m builder\u001b[39m.\u001b[39mbuild()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'll_alternatives' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Librarian: Unfortunately, the book you are looking for is currently unavailable as the last copy has been recently rented out.\n"
      ]
     }
    ],
@@ -152,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unfortunately, we do not currently have that book available. It appears that someone has recently rented the last available copy.\n"
+      "Librarian: Unfortunately, the book is currently unavailable as the last copy has just been rented out.\n"
      ]
     }
    ],
