Evaluation bots started.

--- a/src/analysis/summarization.ipynb
+++ b/src/analysis/summarization.ipynb
@@ -16,10 +16,7 @@
     "from notebook_init import notebook_init, notebook_imports\n",
     "\n",
     "notebook_init()\n",
-    "notebook_imports()\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "notebook_imports()\n"
    ]
   },
   {
@@ -62,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,19 +67,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "SUMMARY:  The customer wants a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests that the customer try one of their freshly squeezed juices instead.\n",
-      "CHARS:  183\n",
-      "WORDS:  30\n",
+      "SUMMARY:  The customer asks for a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests trying one of the freshly squeezed juices instead.\n",
+      "CHARS:  169\n",
+      "WORDS:  28\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer decides to try the apricot juice based on the waiter's recommendation.\n",
-      "CHARS:  83\n",
-      "WORDS:  13\n",
+      "SUMMARY:  The customer asks for a cappuccino, but the coffee machine is broken. The waiter recommends trying the apricot juice, and the customer agrees to have it.\n",
+      "CHARS:  153\n",
+      "WORDS:  26\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer asks the waiter if they have any cakes, specifically a blueberry tart. The waiter confirms that they have blueberry tarts and the customer agrees to order one.\n",
-      "CHARS:  172\n",
-      "WORDS:  29\n"
+      "SUMMARY:  The customer asks if there are any cakes available and the waiter confirms that they have several different tarts. The customer specifically asks for a blueberry tart and the waiter confirms that they have a freshly baked one. The customer expresses gratitude and thanks the waiter.\n",
+      "CHARS:  282\n",
+      "WORDS:  46\n"
      ]
     }
    ],
@@ -121,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,19 +126,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "SUMMARY:  The customer enters the restaurant and asks for a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests that the customer tries one of the freshly squeezed juices instead.\n",
-      "CHARS:  212\n",
-      "WORDS:  35\n",
+      "SUMMARY:  The customer asks for a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests that the customer try one of their freshly squeezed juices instead.\n",
+      "CHARS:  186\n",
+      "WORDS:  31\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer enters the restaurant and asks for a cappuccino, but is informed by the waiter that the coffee machine is broken. The waiter suggests trying one of the freshly squeezed juices instead. The customer asks for a recommendation and the waiter suggests the apricot juice, highlighting its rich flavor. The customer agrees to try the apricot juice.\n",
-      "CHARS:  355\n",
-      "WORDS:  58\n",
+      "SUMMARY:  The customer asks for a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests that the customer try one of their freshly squeezed juices instead. The customer agrees and asks for a recommendation. The waiter suggests the apricot juice, and the customer decides to go with that.\n",
+      "CHARS:  318\n",
+      "WORDS:  53\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer enters the restaurant and asks for a cappuccino, but is informed by the waiter that the coffee machine is broken. The waiter suggests trying one of the freshly squeezed juices instead. The customer asks for a recommendation and the waiter suggests the apricot juice, highlighting its rich flavor. The customer agrees to try the apricot juice. Later, the customer asks if the restaurant has any cakes, specifically a blueberry tart. The waiter confirms that they do have a blueberry tart and the customer orders one.\n",
-      "CHARS:  528\n",
-      "WORDS:  87\n"
+      "SUMMARY:  The customer initially wanted a cappuccino, but the coffee machine was broken. The waiter suggested trying a freshly squeezed juice instead, and the customer agreed. The waiter recommended apricot juice, and the customer decided to go with that. Then, the customer asked if they had any cakes, specifically a blueberry tart. The waiter confirmed that they did have blueberry tarts and the customer ordered one.\n",
+      "CHARS:  410\n",
+      "WORDS:  65\n"
      ]
     }
    ],
@@ -180,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -188,19 +185,19 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "SUMMARY:  The customer wants a cappuccino, but the coffee machine is broken. The waiter suggests a variety of freshly squeezed juices as an alternative.\n",
-      "CHARS:  142\n",
-      "WORDS:  23\n",
+      "SUMMARY:  A customer goes to a café and asks for a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests that the customer can choose from a variety of freshly squeezed juices instead.\n",
+      "CHARS:  215\n",
+      "WORDS:  38\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer wants a cappuccino, but the coffee machine is broken. The waiter suggests apricot juice as an alternative, which the customer agrees to try.\n",
-      "CHARS:  153\n",
-      "WORDS:  25\n",
+      "SUMMARY:  A customer goes to a café and asks for a cappuccino, but the waiter informs them that the coffee machine is broken. The waiter suggests that the customer can choose from a variety of freshly squeezed juices instead. The customer decides to try the apricot juice, which the waiter highly recommends.\n",
+      "CHARS:  298\n",
+      "WORDS:  51\n",
       "----------------------------------\n",
       "\n",
-      "SUMMARY:  The customer wants a cappuccino, but the coffee machine is broken. The waiter suggests apricot juice as an alternative, which the customer agrees to try. The customer then asks if they have any cakes, specifically a blueberry tart, and the waiter confirms that they do and offers to bring one.\n",
-      "CHARS:  293\n",
-      "WORDS:  50\n"
+      "SUMMARY:  A customer goes to a café and asks for a cappuccino, but the coffee machine is broken. The waiter suggests apricot juice as an alternative. The customer also asks for a blueberry tart, which the waiter confirms they have.\n",
+      "CHARS:  221\n",
+      "WORDS:  39\n"
      ]
     }
    ],
